style: fix the slider gap

--- a/src/views/FileHandler/FileHandler.scss
+++ b/src/views/FileHandler/FileHandler.scss
@@ -68,6 +68,7 @@
   
         .drawer-list-stack {
           display: flex;
+          gap: 10px;
           justify-content: space-between;
           width: 100%;
   
